Override bcpkix-jdk18on to address CVE-2025-8916